--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -34,12 +34,14 @@ body {
     top: 0;
     width: 100%;
     height: 80px;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.774);
     display: flex;
     justify-content: space-around;
     gap: 10em;
     z-index: 1000; /* Ensure navbar is on top */
-    padding-top: 0.8em;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
+    
 }
 
 .sec1 {
@@ -70,10 +72,10 @@ body {
     border-radius: 26px;
     padding: 0.5em 0.8em;
     padding-top: 0.7em;
-    background-color: rgb(43, 43, 43);
+    background-color: rgba(43, 43, 43, 0.534);
 }
 .social-icons li:hover{
-    background: linear-gradient(105deg, #121212, #c37af7);
+    background: linear-gradient(105deg, #000000ae,  #422538c7);
 }
 .social-icons li a img {
     transition: transform 0.3s ease;
@@ -106,10 +108,10 @@ body {
     color: white;
     border: none;
     padding: 1.3em 2.2em;
-    border: 0.3px solid white;
     font-size: 1em;
     font-weight: bolder;
-    background: linear-gradient(95deg, #121212, #c37af7);
+    background: linear-gradient(105deg, #000000ae,  #422538c7);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     background-size: 200% 100%;
     transition: background-position 0.3s ease;
 }
@@ -146,10 +148,11 @@ transition: background-position 0.3s ease;:
     list-style: none;
     display: flex;
     gap: 2em;
-    color: white;
-    margin-left: 2em;
+    color: rgba(255, 255, 255, 0.704);
+    /* margin-left: 2em; */
     justify-content: center;
     align-items: center;
+    margin-left: 1.5em;
     /* background-color: wheat; */
 }
 
@@ -160,11 +163,11 @@ transition: background-position 0.3s ease;:
 }
 
 .link-to-sections li a:visited {
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.875);
 }
 
 .link-to-sections li a:hover {
-    background: linear-gradient(95deg, #121212, #c37af7); /* Change text color to #c37af7 on hover */
+    color: rgb(240, 214, 251);
 }
 
 .link-to-sections li {
