--- a/src/Components/SkillsSec.css
+++ b/src/Components/SkillsSec.css
@@ -1,25 +1,25 @@
 .skills-sec{
     display: flex;
-    justify-content:flex-end;
-    width: auto;
+    justify-content: center;
+    width: 100%;
     height: 18em;
     background-color: #0d0d0d;
     
 }
 .skills-div{
     /* position: absolute; */
-    background-color: #0d0d0d;
-    width: 72%;
+    width: 86%;
+    background-color: black;
     height: 16em;
-    border-radius: 64px 0px 0px 64px;
+    border-radius: 64px;
     border: 1px solid #8f75e4;
     gap: 0.2em;
     z-index: 4;
-    border-right: none;
+    padding: 0.2em;
 }
 .skills-div h2{
     color: white;
-    padding: 1em;
+    padding: 0.7em;
     font-size: 1.8em;
 }
 .skills-div h3{
@@ -27,7 +27,8 @@
     background: linear-gradient(180deg, #000000ae, #000000ae, #000000ae, #000000ae, #000000ae,#000000ae,#000000ae,#000000ae,#000000ae, #893492,#8f75e4);
     color:white;
     border: 1px solid white;
-    margin: 0.2em;
-    padding: 0.15em;
+    margin: 0.3em;
+    padding: 0.55em;
     font-weight: 300;
+    border-radius: 19px;
 }
