--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -7,7 +7,7 @@
     color: white;
     width: 100vw;
     height: 3em;
-    background: linear-gradient(180deg, #00000000, #00000000, #00000000,#00000000,#00000000,#00000000,#00000000, #893492,#8f75e4);
+    background: linear-gradient(180deg, #000000ae, #000000ae, #000000ae, #000000ae, #000000ae,#000000ae,#000000ae,#000000ae,#000000ae, #00b1e4, #0c323e);
 }
 .last-line ul{
     display: flex;
@@ -26,9 +26,9 @@
     color: white;
     text-decoration: none;
 }
-.last-line a:hover{
+.last-line ul a:hover{
     cursor: pointer;
-    filter: brightness(70%);
+    color: #00b1e4;
 }
 .last-line ul a:visited{
     color: white;
