--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -32,11 +32,12 @@ body {
 .top-nav {
     position: fixed; /* Fix navbar to the top */
     top: 0;
-    width: 100%;
+    width: 100vw;
     height: 80px;
     background-color: rgba(0, 0, 0, 0.774);
     display: flex;
     justify-content: space-around;
+    align-items: center;
     gap: 10em;
     z-index: 1000; /* Ensure navbar is on top */
     padding-top: 2.5em;
@@ -46,8 +47,8 @@ body {
 
 .sec1 {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .sec2 {
@@ -75,7 +76,7 @@ body {
     background-color: rgba(43, 43, 43, 0.534);
 }
 .social-icons li:hover{
-    background: linear-gradient(105deg, #000000ae,#893492, #8f75e4);
+    background: linear-gradient(105deg, #000000ae,#006589, #00b1e4);
 }
 .social-icons li a img {
     transition: transform 0.3s ease;
@@ -85,15 +86,16 @@ body {
     transform: scale(1.35);
     /* Scale up the size on hover */
 }
-
-.nav-logo>img {
-    width: 5.8em;
+.beh-icon, .gith-icon, .linkedin-icon{
+    filter: invert(100%);
+}
+.nav-logo>a>img {
+    width: 6.8em;
     height: 5em;
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: blue; */
+}
+.nav-logo:hover{
+    cursor: pointer;
+    transform: translate(1.1);
 }
 
 .top-but-box {
@@ -105,20 +107,19 @@ body {
 
 .connect-but {
     background-color: transparent; 
-    color: white;
+    color: #00b1e4;
     border: none;
-    padding: 1.3em 2.2em;
     font-size: 1em;
     font-weight: bolder;
-    background: linear-gradient(105deg, #000000ae,#893492, #8f75e4);
-    border: 1px solid rgba(255, 255, 255, 0.5); 
+    /* background: linear-gradient(105deg, #000000ae,#006589); */
+    /* border: 1px solid rgba(255, 255, 255, 0.5);  */
     background-size: 200% 100%;
     transition: background-position 0.3s ease;
 }
 /* #8f75e4 #893492*/
 .connect-but:hover {
     cursor: pointer;
-    background-position: -100% 0;
+    filter: brightness(130%);
 }
 
 /*
@@ -147,11 +148,12 @@ transition: background-position 0.3s ease;:
     list-style: none;
     display: flex;
     gap: 2em;
-    color: rgba(255, 255, 255, 0.704);
+    color: #00b1e4;
+    /* color: rgba(255, 255, 255, 0.704); */
     /* margin-left: 2em; */
     justify-content: center;
     align-items: center;
-    margin-left: 1.5em;
+    /* margin-left: 1.5em; */
     /* background-color: wheat; */
 }
 
@@ -162,14 +164,171 @@ transition: background-position 0.3s ease;:
 }
 
 .link-to-sections li a:visited {
-    color: #cab3da;
+    color: #00b1e4;
 }
 
 .link-to-sections li a:hover {
-    color: #8f75e4;
+    filter: brightness(130%);
 }
 
 .link-to-sections li {
     width: 70px;
     /* Fixed width for list items so as to prevent the dispalcement of every element from its place in the navbar*/
+}
+
+.sec3, .mobile-menu{
+    display: none;
+}
+
+/*adding Responsiveness */
+
+/* For smaller laptops */
+@media (max-width:1200px) and (min-width: 1025px) {
+    .top-nav{
+        gap: 6em;
+    }
+    .link-to-sections{
+        gap: 1.5em;
+    }
+    .sec3{
+        display: none;
+    }
+}
+
+/* For tablets */
+@media (max-width:1024px) and (min-width: 769px) {
+    .top-nav{
+        gap: 2em;
+    }
+    .link-to-sections{
+        gap: 0.2em;
+    }
+    .nav-logo>a>img {
+        width: 4.8em;
+        height: 3em;
+    }
+    .link-to-sections li a {
+        font-size: 1.1em;
+    }
+    .sec3{
+        display: none;
+    }
+    .top-but-box{
+        display: none;
+    }
+}
+
+/* For mobile devices */
+@media (max-width:768px) and (min-width: 481px) {
+    .top-nav{
+        gap: 0em;
+    }
+    .nav-logo>a>img {
+        width: 3.8em;
+        height: 3em;
+    }
+    .link-to-sections li a {
+        font-size: 1em;
+    }
+    .social-icons{
+        display: none;
+    }
+    .top-but-box{
+        margin-right:1.4em;
+    }
+    .sec3 button{
+        border: none;
+        background-color: #12121200;
+        filter: invert(100%);
+    }
+    .sec3>button>img{
+        width: 2em;
+        height: 2em;
+        margin-right: 2.5em;
+    }
+    .sec3{
+        display: inline;
+        position: absolute;
+        right: 0;
+    }
+    .social-icons, .top-but-box, .link-to-sections li a {
+        display: none;
+    }
+    .connect-but span{
+        display: none;
+    }
+}
+
+/* For smaller mobile devices */
+@media (max-width:480px) and (min-width: 320px) {
+    .top-nav{
+        gap: 0em;
+        background-color: black;
+    }
+    .sec1{
+        margin-left: 4%;
+    }
+    .nav-logo>a>img {
+        padding-top: 0.4em;
+        width: 3.8em;
+        height: 3em;
+    }
+    .social-icons, .top-but-box, .link-to-sections li a {
+        display: none;
+    }
+    .sec3 button{
+        border: none;
+        background-color: #12121200;
+        filter: invert(100%);
+    }
+    .sec3>button>img{
+        width: 2em;
+        height: 2em;
+        margin-right: 2.5em;
+    }
+    .sec3{
+        display: inline;
+        position: absolute;
+        right: 0;
+    }
+    .connect-but span{
+        display: none;
+    }
+    
+/* Mobile menu styling */
+.mobile-menu {
+    position: fixed;
+    top: 80px;
+    right: 0;
+    width: 100%;
+    height: calc(100vh - 80px);
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.mobile-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.mobile-menu ul li {
+    margin: 1em 0;
+}
+
+.mobile-menu ul li a {
+    color: #00b1e4;
+    font-size: 1.5em;
+    text-decoration: none;
+}
+
+.mobile-menu ul li a img {
+    width: 1.2em; /* Adjust size */
+    height: 1.2em; /* Adjust size */
+}
 }
