--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -133,13 +133,13 @@
 /* For smaller mobile devices */
 @media (max-width:480px) and (min-width: 320px) {
     .main-sec{
-        background-color: black;
+        /* background-color: black; */
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
     .main-text h1{
-        font-size: 1.8em;
+        font-size: 2.2em;
         display: flex;
         justify-content: center;
         margin: 0;
