--- a/src/Components/SkillsSec.css
+++ b/src/Components/SkillsSec.css
@@ -31,6 +31,9 @@
     font-weight: 300;
     border-radius: 19px;
 }
+.skills-div h3:hover{
+    transform: scale(1.1);
+}
 #creation-sec{
     position: absolute;
     display: inline;
@@ -65,16 +68,19 @@
 /* For smaller mobile devices */
 @media (max-width:480px) and (min-width: 320px) {
     .skills-sec{
-        background-color: black;
+        margin-bottom: 60px;
+        margin-top: 40px;
+        background-color: #121212;
     }
     .skills-div{
+        width: 78%;
         height: 18em;
     }
     .skills-div h3{
         margin: 0.3em;
-        padding: 0.25em;
+        padding: 0.3em;
         font-weight: 300;
-        font-size: 1em;
+        font-size: 0.9em;
         border-radius: 19px;
     }
 }
