--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -8,6 +8,7 @@
     align-items: center;
     /* justify-content:space-around; */
     /* background-color: rgba(0, 0, 0, 0.265); */
+    background-color: #020d2e6e;
     
 }
 
@@ -30,9 +31,9 @@
     left: 0;
     width: 100%; /* Full width of the viewport */
     height: 100%; /* Full height of the viewport */
-    background: url(../Images/91659.jpg) no-repeat bottom; /* Background image settings */
+    background: url(../Images/bgImg.jpg) no-repeat bottom; /* Background image settings */
     background-size: cover; /* Cover the element with the background image */
-    opacity: 30%;
+    opacity: 90%;
     z-index: -1; /* Ensure it is behind the content */
 }
 
@@ -61,6 +62,7 @@
 }
 .txt-rotate{
     color: #00b1e4;
+    background-color: #020d2e8b;
 }
 
 .main-sub-sec2{
@@ -123,11 +125,61 @@
    .main-text div{
     width: 25em;
    }
+   .txt-rotate{
+    background-color: #020d2e00;
+}
 }
 
 /* For mobile devices */
 @media (max-width:768px) and (min-width: 481px) {
-    
+    .main-sec{
+        /* background-color: black; */
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .main-text h1{
+        font-size: 2.2em;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        width:10em;
+    }
+    .main-text div{
+        width: 22em;
+        font-size: 0.8em;
+        padding: 0;
+        margin: 0;
+    }
+    .main-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 22em;
+        /* background-color: red; */
+        text-align: justify;
+        /* margin-left: 1.2em; */
+    }
+    .main-text p{
+        margin-left: 0;
+        padding: 0;
+    }
+    .main-sub-sec1{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        padding: 3em;
+        /* background-color: blue; */
+    }
+    .main-sub-sec2{
+        justify-content: center;
+        width: 80%;
+    }
+    .txt-rotate{
+        background-color: #020d2e00;
+    }
 }
 
 /* For smaller mobile devices */
@@ -176,5 +228,8 @@
     .main-sub-sec2{
         justify-content: center;
         width: 80%;
+    }
+    .txt-rotate{
+        background-color: #020d2e00;
     }
 }
