--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -7,7 +7,7 @@
     color: white;
     width: 100vw;
     height: 3em;
-    background: linear-gradient(180deg, #000000ae, #000000ae, #000000ae, #000000ae, #000000ae,#000000ae,#000000ae,#000000ae,#000000ae, #00b1e4, #0c323e);
+    background: linear-gradient(180deg,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972, #00b1e4, #0c323e);
 }
 .last-line ul{
     display: flex;
