--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -25,7 +25,7 @@
 
 body {
     font-weight: 400;
-    background-color: #121212;
+    background-color: #020d2e;
     font-family: 'Centra', sans-serif;
 }
 
@@ -34,7 +34,8 @@ body {
     top: 0;
     width: 100vw;
     height: 80px;
-    background-color: rgba(0, 0, 0, 0.774);
+    /* background-color: #1c3972b7; */
+    background: linear-gradient(105deg, #020d2e8b,#1c3972, #00b1e4);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -69,14 +70,15 @@ body {
 
 .social-icons li {
     list-style: none;
-    border: 1px solid rgb(127, 124, 124);
+    border: 1px solid rgba(255, 255, 255, 0.797);
     border-radius: 26px;
     padding: 0.5em 0.8em;
     padding-top: 0.7em;
-    background-color: rgba(43, 43, 43, 0.534);
+    background-color: #1c3972;
 }
 .social-icons li:hover{
-    background: linear-gradient(105deg, #000000ae,#006589, #00b1e4);
+    /* background: linear-gradient(105deg, #000000ae,#1c3972, #00b1e4); */
+    background-color: #1c3972cf;
 }
 .social-icons li a img {
     transition: transform 0.3s ease;
@@ -107,7 +109,8 @@ body {
 
 .connect-but {
     background-color: transparent; 
-    color: #00b1e4;
+    /* color: #00b1e4; */
+    color: white;
     border: none;
     font-size: 1em;
     font-weight: bolder;
@@ -119,7 +122,7 @@ body {
 /* #8f75e4 #893492*/
 .connect-but:hover {
     cursor: pointer;
-    filter: brightness(130%);
+    filter: brightness(90%) ;
 }
 
 /*
@@ -302,7 +305,7 @@ transition: background-position 0.3s ease;:
     right: 0;
     width: 100%;
     height: calc(100vh - 80px);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: #020d2ee8;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -331,4 +334,13 @@ transition: background-position 0.3s ease;:
     width: 1.2em; /* Adjust size */
     height: 1.2em; /* Adjust size */
 }
+}
+
+.hidden {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+}
+
+.top-nav {
+    transition: transform 0.3s ease;
 }
