--- a/src/Components/ProjectSec.css
+++ b/src/Components/ProjectSec.css
@@ -1,7 +1,7 @@
 .project-sec {
     width: auto;
     height: 31em;
-    background-color: #0d0d0d;
+    background-color: #020d2e;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,7 +22,7 @@
     align-items: center;
     width: 86%;
     height: 100%;
-    background-color: black;
+    background: linear-gradient(105deg, #020d2eb8,#1c39729c, #00b3e49a);
     padding: 2em;
     border-radius: 64px;
     border: 1px solid #00b1e4;
@@ -35,7 +35,7 @@
     border: 0.5px solid white;
     border-radius: 64px;
     display: flex;
-    background: linear-gradient(105deg, #000000ae, #00b1e4, #217a82);
+    background: linear-gradient(#1c3972, #1c3972,#1c3972,#1c3972,#1c3972,#00b1e4);
 }
 
 .proj-bttn {
@@ -51,13 +51,13 @@
 .proj-bttn:hover {
     cursor: pointer;
     /* background: linear-gradient(105deg, #000000ae, #8f75e4); */
-    background-color: #0d0d0d;
+    background: linear-gradient( #020d2eb8, #020d2eb8, #020d2eb8, #020d2eb8, grey);
     opacity: 90%;
 }
 
 .tech-btn {
     border-radius: 64px 0px 0px 64px;
-    background-color: #0d0d0d;
+    background: linear-gradient( #020d2eb8, #020d2eb8, #020d2eb8, #020d2eb8, grey);
 }
 
 .content-btn {
@@ -129,7 +129,7 @@
 /* For tablets */
 @media (max-width:1024px) and (min-width: 769px) {
     .project-sec{
-        background-color: #121212;
+        background-color: #020d2e;
     }
     .project-img-div {
         flex-direction: column;
@@ -150,7 +150,7 @@
 /* For smaller mobile devices */
 @media (max-width:480px) and (min-width: 320px) {
     .project-sec{
-        background-color: #121212;
+        background-color: #020d2e;
     }
     .project-sec>div{
         margin-top: 28em;
@@ -168,5 +168,4 @@
     .proj-bttns-div{
         width: 100%;
     }
-   
 }
