--- a/src/Components/ProjectSec.css
+++ b/src/Components/ProjectSec.css
@@ -57,7 +57,7 @@
 
 .tech-btn {
     border-radius: 64px 0px 0px 64px;
-    background: linear-gradient( #020d2eb8, #020d2eb8, #020d2eb8, #020d2eb8, grey);
+    /* background: linear-gradient( #020d2eb8, #020d2eb8, #020d2eb8, #020d2eb8, grey); */
 }
 
 .content-btn {
@@ -120,6 +120,14 @@
     cursor: pointer;
     transform: scale(1.1);
 }
+.proj-bttn.active {
+    background: linear-gradient(#020d2eb8, #020d2eb8, #020d2eb8, #020d2eb8, grey);
+    opacity: 90%;
+}
+
+.proj-bttn.previous {
+    background: linear-gradient(#1c3972, #1c3972,#1c3972,#1c3972,#1c3972,#00b1e4);
+}
 
 /*adding Responsiveness */
 
@@ -145,7 +153,27 @@
 }
 
 /* For mobile devices */
-@media (max-width:768px) and (min-width: 481px) {}
+@media (max-width:768px) and (min-width: 481px) {
+    project-sec{
+        background-color: #020d2e;
+    }
+    .project-sec>div{
+        margin-top: 28em;
+        width: 78%;
+        height: 58em;
+        padding: 1em;
+    }
+    .project-img-div{
+        flex-direction: column;
+        gap: 1.3em;
+    }
+    .projects img{
+        width: 95%;
+    }
+    .proj-bttns-div{
+        width: 100%;
+    }
+}
 
 /* For smaller mobile devices */
 @media (max-width:480px) and (min-width: 320px) {
