--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -98,7 +98,7 @@
 
 /* For smaller laptops */
 @media (max-width:1200px) and (min-width: 1025px) {
-    
+
 }
 
 /* For tablets */
@@ -140,6 +140,7 @@
 @media (max-width:768px) and (min-width: 481px) {
     .main-sec{
         /* background-color: black; */
+        padding-top: 14em;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -181,7 +182,7 @@
     }
     .main-sub-sec2{
         justify-content: center;
-        width: 80%;
+        width: 60%;
     }
     .txt-rotate{
         background-color: #020d2e00;
