--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -37,6 +37,12 @@
 .foot-social-icons{
     border-radius: none;
 }
+/* For mobile devices */
+@media (max-width:768px) and (min-width: 481px) {
+    footer{
+        margin-top: 28em;
+    }
+}
 
 /* For smaller mobile devices */
 @media (max-width:480px) and (min-width: 320px) {
