--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     color: white;
-    width: 100vw;
+    width: 100%;
     height: 3em;
     background: linear-gradient(180deg,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972,#1c3972, #00b1e4, #0c323e);
 }
