--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -32,12 +32,13 @@ body {
 .top-nav {
     position: fixed; /* Fix navbar to the top */
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     /* background-color: #1c3972b7; */
-    background: linear-gradient(105deg, #020d2e8b,#1c3972, #00b1e4);
+    background: linear-gradient(105deg, #020d2ecd,#1c3972, #00b1e4);
+    background-color: rgba(0, 0, 0, 0.625);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     gap: 10em;
     z-index: 1000; /* Ensure navbar is on top */
@@ -50,6 +51,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 6.5%;
 }
 
 .sec2 {
@@ -57,6 +59,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2em;
+    padding-right: 6.5%;
 }
 
 .social-icons {
