--- a/src/Components/ProjectSec.css
+++ b/src/Components/ProjectSec.css
@@ -88,7 +88,7 @@
 }
 
 .projects img:hover {
-    /* transform: scale(1.1); */
+    transform: scale(1.03);
     border: 0.5px solid white;
     box-shadow: 5px 4px 5px white;
     /* filter: blur(2px); */
@@ -127,6 +127,7 @@
 }
 
 /*adding Responsiveness */
+
 
 /* For smaller laptops */
 @media (max-width:1200px) and (min-width: 1025px) {}
